--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,8 +16,8 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2a9d8f;  /* headlines on a white background */ 
-  --headline-color-on-color: #e76f51;/* headlines on a colored background */ 
-  --paragraph-color-on-white: #e9c46a; /* paragraph text on a white background */ 
+  --headline-color-on-color: #2a9d8f;/*f headlines on a colored background */ 
+  --paragraph-color-on-white: ad#e9c46a; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #e9c46a; /* paragraph text on a colored background */ 
   --paragraph-background-color: #e76f51  ;
   --nav-link-color: #e76f51;
