--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -20,7 +20,7 @@ Fonts are separated by a & */
   --paragraph-color-on-white: ad#e9c46a; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #e9c46a; /* paragraph text on a colored background */ 
   --paragraph-background-color: #e9c46a  ;
-  --nav-link-color: #e76f51;
+  --nav-link-color: #2a9d8f;
   --nav-background-color: #e9c46a;
   --nav-hover-link-color: #2a9d8f;
   --nav-hover-background-color: #2a9d8f;
