--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,8 +5,8 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #e76f51   ;
-  --secondary-color: #2a9d8f ;
+  --primary-color: #2a9d8f   ;
+  --secondary-color: #e76f51;
   --accent1-color: #e9c46a;
   --accent2-color: #f4a261;
 
