--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -22,7 +22,7 @@ Fonts are separated by a & */
   --paragraph-background-color: #e9c46a  ;
   --nav-link-color: #2a9d8f;
   --nav-background-color: #e9c46a;
-  --nav-hover-link-color: #2a9d8f;
+  --nav-hover-link-color: #e76f51;
   --nav-hover-background-color: #2a9d8f;
 }
 
