--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,7 +16,7 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #f4a261;  /* headlines on a white background */ 
-  --headline-color-on-color: #2a9d8f;/*f headlines on a colored background */ 
+  --headline-color-on-color: #e9c46a;/*f headlines on a colored background */ 
   --paragraph-color-on-white: ad#e9c46a; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #e76f51; /* paragraph text on a colored background */ 
   --paragraph-background-color: #2a9d8f  ;
