--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -2,25 +2,32 @@
 max-width: 1600px;
 margin: 0 auto;
 }
+#logo{
+width: 100px;
+height: auto;
+
+}
 #background {
     height: 725px;
+    background-color: chocolate;
 }
-body {
-    background-color: #fcfbfb; 
+#hero-box{
+text-align: center;
 }
+
 header {
-    background-color:rgba(20,30,13, .7);
+    background-color:chocolate;
 }
 nav a:hover {
     background-color: black;
-    color: #d9c2a3;
+    color: #f28b05;
 }
 .icon {
     width: 80px;
 }
 nav a {
     text-align: center;
-    color: #fcfbfb;
+    color: blue;
     text-decoration: none;
 } 
 footer p {
@@ -30,3 +37,38 @@ footer p a:hover {
     text-decoration: underline;
 }    
                     
+main section{
+    text-align: center;
+}
+.button-box{
+    text-align: center;
+}
+#hero-msg h1, #hero-msg h4{
+text-align: center;
+}
+body{
+  background-color: #d9c2a3;  
+}
+header{
+    background-color:chocolate;
+}
+nav a:hover{
+    background-color: chocolate;
+}
+.book, .join{
+    background-color: chocolate;
+    text-decoration: none;
+}
+.book:hover, .join:hover{
+    background-color:chocolate;
+}
+
+.msg{
+    background-color: chocolate;
+}
+footer{
+    background-color: chocolate;
+}
+footer a{
+    text-decoration: none;
+}
