--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,18 +5,31 @@ margin: 0 auto;
 #logo{
 width: 100px;
 height: auto;
+padding-top: 5px;
+justify-self: center;
+align-self: center;
 
 }
 #background {
     height: 725px;
     background-color: chocolate;
 }
-
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
 
 #hero-box{
 text-align: center;
 margin-top: 100px;
-
+grid-column: 1/4;
+grid-row: 1/3;
+grid-column: 1/4;
+grid-row: 1/3;
+z-index: -1;
 }
 
 
@@ -52,6 +65,7 @@ main section{
 }
 #hero-msg h1, #hero-msg h4{
 text-align: center;
+color: white;
 }
 body{
   background-color: #d9c2a3; 
@@ -61,9 +75,13 @@ body{
     padding: 0; 
 }
 header{
-    background-color:chocolate;
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color: chocolate;
 }
 nav a:hover{
+    display: flex;
+    justify-content: space-around;
     background-color: brown ;
 }
 .book, .join{
@@ -81,6 +99,17 @@ nav a:hover{
 .msg{
     background-color: brown;
     line-height: 1.5em;
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer{
     background-color: chocolate;
@@ -95,10 +124,139 @@ footer a{
 
 .card-img {
     border: 10px solid brown;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 main section img {
     box-sizing: border-box;
 }
 .home-grid{
 margin-top:60px
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.msg {
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
