--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -222,10 +222,21 @@ card-img {
 #Mpic {
 
     float: left;
+    box-shadow: 5px 5px 10px #6f7364;
+    border-radius: 10px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
 
 }
 #Bpic {
    float: auto;
+   box-shadow: 5px 5px 10px #6f7364; 
+   margin-left: 40px;
+}
+#para{
+    margin-left: 40px;
+    margin-right: 40px;
 }
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
