--- a/nateweb/styles/sub.css
+++ b/nateweb/styles/sub.css
@@ -69,4 +69,32 @@
         
         
      }
-  
+  form{
+    text-align: center;
+    
+
+  }    
+  .con{
+    text-align: center;
+  }
+
+  form button{
+    background-color: #fb2104; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  }
+  form button:hover{
+    background-color: black; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  }
